{
    "name": "TouchInput",
    "maps": [
        {
            "name": "ScreenInput",
            "id": "fd251c34-7cb6-4c7e-aa14-304549896ae2",
            "actions": [
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "14f3fd3f-f7ae-4869-88f7-337a0c3a6e9f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "7dbff5ec-73c5-4ef0-99cc-ea0d046a2c4b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8958275c-9886-4579-ab77-fbd91b0fb521",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b0c449c-4814-4530-961e-9349f5a1c362",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}